--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,67 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: orange;
+    margin: 0;
+    padding: 0;
+    box-shadow: 4px 3px 10px 5px inset rgba(0, 0, 0, 0.378);
+}
+
+#calculator-body {
+    background-color: rgb(42, 42, 42);
+    height: 500px;
+    width: 300px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 2px solid black;
+    box-shadow: 1px 1px 70px rgba(0, 0, 0, 0.973);
+}
+
+#calculator-screen {
+    background-color: rgba(35, 35, 35, 0.614);
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px 5px inset rgba(0, 0, 0, 0.378);
+}
+
+#clear-buttons {
+    display: flex;
+    margin: 10px;
+    gap: 10px;
+    justify-content: space-between;
+    width: 98%;
+}
+
+#calculator-buttons {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.button {
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    border: .5px solid black;
+    background-color: rgb(93, 93, 93);
+    color: white;
+    font-size: 20px;
+}
+
+.operator {
+    background-color: orange;
+}
+
