--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,23 @@ body {
     font-size: 20px;
 }
 
+.button:hover {
+    background-color: rgb(139, 139, 139);
+}
+
+.operator:hover {
+    background-color: rgba(216, 140, 0, 0.861);
+}
+
+.button:active {
+    background-color: rgba(255, 255, 255, 0.332);
+    transform: translateY(3px);
+}
+
+.operator:active {
+    background-color: rgba(255, 166, 0, 0.885);
+}
+
 .operator {
     background-color: orange;
 }
