--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,13 @@ body {
     margin-bottom: 10px;
     border-radius: 10px;
     box-shadow: 1px 1px 10px 5px inset rgba(0, 0, 0, 0.378);
+    display: flex;
+    color: rgba(255, 255, 255, 0.725);
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 25px;
+    font-size: 23px;
+    letter-spacing: 1px;
 }
 
 #clear-buttons {
